--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="explore_name">Explore</string>
     <string name="search_name">Search</string>
     <string name="quiz_name">Quiz</string>
+    <string name="create_folder_name">Create</string>
 </resources>
